# LeagueTools

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Components/Box/: Box.module.scss  Box.tsx
src/Components/Button/: Button.module.scss  Button.tsx
src/Components/Icons/: CheckIcon.tsx  CloseIcon.tsx  HomeIcon.tsx  MaximizeIcon.tsx  MinimizeIcon.tsx  ProfileIcon.tsx
src/Components/LCUStatus/: LCUStatus.tsx
src/Components/Navbar/: Navbar.module.scss  Navbar.tsx
src/Components/Portal/: Portal.tsx  PortalContainer.tsx
src/Components/RenderWithConnection/: RenderWithConnection.tsx
src/Components/Text/: Text.module.scss  Text.tsx
src/Components/TextArea/: TextArea.module.scss  TextArea.tsx
src/Components/TextInput/: TextInput.module.scss  TextInput.tsx
src/Components/TitleBar/: TitleBar.module.scss  TitleBar.tsx
src/Components/Tooltip/: Tooltip.module.scss  Tooltip.tsx
src/Contexts/: LeagueContext.tsx
src/Models/: ApiConfig.ts  LCUData.ts  LeagueApi.ts
src/Pages/AutoAccept/: AutoAccept.module.scss  AutoAccept.tsx
src/Pages/Home/: Home.tsx
src/Pages/Layout/: Layout.tsx
src/Pages/Status/: Status.module.scss  Status.tsx
src/Services/: LeagueService.ts  TauriHttpClient.ts
src/Styles/: _defaultVariables.scss  _fonts.scss  _toast.scss  global.scss
