[package]
name = "leaguetools"
version = "0.0.1"
description = "League Tools"
authors = ["karol2502"]
license = "MIT License"
repository = "https://github.com/karol2502/LeagueTools"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-unmaximize", "window-hide", "window-close", "window-start-dragging", "window-minimize", "window-show", "window-unminimize", "window-maximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.5"
reqwest = { version = "0.11.23", features = ["json"] }
base64 = "0.21.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# https://tauri.app/v1/guides/building/app-size#rust-build-time-optimizations
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
